# warehouse_elt_dagster_gcp

./: .gitignore  README.md  pyproject.toml
src/dw01/: pjm.py  utils.py
src/dw01/defs/assets/: file_downloader_to_gcp.py  pjm_gcp.py
tests/: test_pjm_parsing.py  test_url_extraction.py
tests/sample_payloads/: 2018-ftr-arr-market-schedule.xls  2025-ftr-arr-market-schedule.xlsx  ftr-model-update-03-11-22.csv  ftr-model-update-03-12-25.csv  ftr-model-update-05-24-17.csv  ftr-model-update-09-17-21.csv  ftr-model-update-10-01-20.csv  ftr-model-update-12-01-18.csv  pjm.ftr.latest.html
