[project]
name = "dw01"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
readme = "README.md"
description = "Work towards a data warehouse with PJM FTR data"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dagster==1.10.19",
    "dagster-gcp>=0.26.19",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "py-linq>=1.4.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
    "pytest>=8.4.0",
    "coverage>=7.8.2",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dw01"
autoload_defs = true


[tool.dg.project.python_environment]
active = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.paths]
source = ["src/dw01"]
